--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "screenshoter",
   "module": "index.js",
   "type": "module",
+  "version": "1.0.0",
+  "license": "MIT",
   "dependencies": {
     "axios": "^1.6.3",
+    "body-parser": "^1.20.2",
     "capture-website": "^4.0.0",
     "dotenv": "^16.3.1",
-    "fastify": "^4.25.2"
+    "express": "^4.18.2"
   },
   "scripts": {
     "start": "node index.js"
