--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "body-parser": "^1.20.2",
     "capture-website": "^4.0.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "metadata-scraper": "^0.2.61",
+    "mongodb": "^6.3.0"
   },
   "scripts": {
     "start": "node index.js",
